--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
-  "extends": "next/core-web-vitals",
-  "@rocketseat/eslint-config/react"
+  "extends": [
+    "next/core-web-vitals",
+    "airbnb",
+    "plugin:prettier/recommended",
+    "@rocketseat/eslint-config/react"
+  ],
+  "plugins": ["prettier"]
 }
