--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "airbnb",
-    "plugin:prettier/recommended",
-    "@rocketseat/eslint-config/react"
-  ],
-  "plugins": ["prettier"]
+  "extends": ["next/core-web-vitals"]
 }
