--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "prettier": "^2.8.8"
   }
 }
