--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
+    "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-quill": "^2.0.0",
