--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
     "incremental": true,
     "plugins": [
       {
@@ -21,8 +22,21 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
+      // "@/components/*": ["components/*"],
+      // "@/pages/*": [
+      //   "pages/*"
+      // ],
+      // "@/styles/*": [
+      //   "styles/*"
+      // ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "types.d.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
