--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
     "start": "json-server --watch src/api/db.json --port 3001",
-    "lint": "next lint",
-    "test": "jest --watch"
+    "lint": "next lint"
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
