--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,14 +21,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-      // "@/components/*": ["components/*"],
-      // "@/pages/*": [
-      //   "pages/*"
-      // ],
-      // "@/styles/*": [
-      //   "styles/*"
-      // ]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/pages/*": ["./src/pages/*"],
+      "@/styles/*": ["./src/styles/*"]
     }
   },
   "include": [
