--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "json-server --watch src/api/db.json --port 3001",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
