--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-quill": "^2.0.0",
+    "slate": "^0.94.1",
+    "slate-react": "^0.98.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
