--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beyond",
+  "name": "beyond-painel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,7 +24,7 @@
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "slate": "^0.94.1",
     "slate-react": "^0.98.0",
@@ -34,6 +34,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/babel__generator": "^7.6.4",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.8.8"
