--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
     "react-quill": "^2.0.0",
     "slate": "^0.94.1",
     "slate-react": "^0.98.0",
@@ -35,6 +36,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__generator": "^7.6.4",
+    "@types/react-input-mask": "^3.0.4",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.8.8"
