Separação dos modais de criar e editar usuário, logout concertado, botões de cancel e confirm ajustados

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "**/*.tsx",
     "types.d.ts",
     ".next/types/**/*.ts"
-  ],
+, "src/components/modal/modalEditUser"  ],
   "exclude": [
     "node_modules"
   ]
