--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^4.0.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
