--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
+    "react-input-slider": "^6.0.1",
     "react-quill": "^2.0.0",
+    "react-slider": "^2.0.6",
     "slate": "^0.94.1",
     "slate-react": "^0.98.0",
     "typescript": "5.1.3"
@@ -41,6 +43,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__generator": "^7.6.4",
     "@types/react-input-mask": "^3.0.4",
+    "@types/react-slider": "^1.3.6",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.8.8"
