--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-input-mask": "^2.0.4",
     "react-input-slider": "^6.0.1",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "react-slider": "^2.0.6",
     "slate": "^0.94.1",
     "slate-react": "^0.98.0",
