--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "next": "13.4.5",
     "react": "18.2.0",
