--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -17,7 +18,7 @@
     "@mui/material": "^5.15.4",
     "@stitches/react": "^1.2.8",
     "@types/js-cookie": "^3.0.3",
-    "@types/node": "20.3.1",
+    "@types/node": "^20.11.17",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "axios": "^1.4.0",
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.4.5",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
@@ -44,14 +46,22 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@swc/core": "^1.4.0",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/babel__generator": "^7.6.4",
+    "@types/jest": "^29.5.12",
     "@types/react-input-mask": "^3.0.4",
     "@types/react-slider": "^1.3.6",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "prettier": "^2.8.8"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.2"
   }
 }
