--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
-    "next": "13.4.5",
+    "next": "^14.1.4",
     "react": "18.2.0",
     "react-calendar": "^4.6.1",
     "react-dom": "18.2.0",
