--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-slider": "^2.0.6",
     "slate": "^0.94.1",
     "slate-react": "^0.98.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
